[workspace]
resolver = "2"
members = ["crates/*", ]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nixon-voxell/bevy_motiongfx"

[package]
name = "bevy_motiongfx"
categories = ["graphics", "gui", "rendering", "motion-graphics", "vector-graphics"]
description = "Motion graphics creation tool in Bevy. (Highly inspired by Motion Canvas and Manim)"
exclude = ["/assets/", "/.github/", "/examples/"]
keywords = ["motion-graphics", "game", "gamedev", "graphics", "bevy", "vello"]
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
motiongfx_core = { version = "0.1.0", path = "crates/motiongfx_core" }
motiongfx_vello = { version = "0.1.0", path = "crates/motiongfx_vello", optional = true }

[features]
default = ["vello"]
vello = ["dep:motiongfx_vello"]

[dev-dependencies]
bevy = "0.13"

[workspace.lints.clippy]
redundant_type_annotations = "warn"
bool_comparison = "allow"
