[package]
name = "bevy_typst"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
motiongfx_core = { path = "../motiongfx_core" }
motiongfx_vello = { path = "../motiongfx_vello" }
motiongfx_typst_macros = { path = "macros" }

bevy = "0.13"
bevy_vello = "0.3"
# typst dependencies
typst = "0.11"
typst-svg = "0.11"
comemo = "0.4" # in sync with typst
fontdb = { version = "0.16", features = ["memmap", "fontconfig"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
ureq = "2"
dirs = "5"
tar = "0.4"
flate2 = "1"
codespan-reporting = "0.11"
ecow = { version = "0.2", features = ["serde"] }
env_proxy = "0.4"

[lints]
workspace = true
