[package]
name = "bevy_vello_graphics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
motiongfx_core = { path = "../motiongfx_core", optional = true }
bevy_vello = "0.3"
bevy = "0.13"

[features]
default = ["motiongfx"]
motiongfx = ["dep:motiongfx_core"]

[lints]
workspace = true
