[package]
name = "motiongfx_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
motiongfx_core = { version = "0.1.0", path = "../motiongfx_core" }
bevy_ecs = { version = "0.11", default-features = false }
bevy_app = { version = "0.11", default-features = false }
bevy_math = { version = "0.11", default-features = false }
bevy_transform = { version = "0.11", default-features = false }
bevy_pbr = { version = "0.11", default-features = false }
bevy_asset = { version = "0.11", default-features = false }
