[package]
name = "motiongfx_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = { version = "0.13", default-features = false }
bevy_app = { version = "0.13", default-features = false }
bevy_math = { version = "0.13", default-features = false }
bevy_transform = { version = "0.13", default-features = false }
bevy_pbr = { version = "0.13", default-features = false }
bevy_asset = { version = "0.13", default-features = false }
bevy_render = { version = "0.13", default-features = false }
motiongfx_core = { path = "../motiongfx_core" }
