[package]
name = "motiongfx_common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy = { version = "0.13", default-features = false }
motiongfx_core = { version = "0.1.0", path = "../motiongfx_core" }

[lints]
workspace = true
