[package]
name = "motiongfx_vello"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
motiongfx_core = { version = "0.1.0", path = "../motiongfx_core" }
bevy_vello_graphics = { version = "0.1.0", git = "https://github.com/voxell-tech/bevy_vello_graphics" }
bevy = "0.13"

[lints]
workspace = true
