[package]
name = "motiongfx_vello"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy = { version = "0.13", default-features = false }
bevy_vello_graphics = { version = "0.1.0", git = "https://github.com/voxell-tech/bevy_vello_graphics" }
motiongfx_core = { version = "0.1.0", path = "../motiongfx_core", features = ["vello_graphics"] }

[lints]
workspace = true
