[package]
name = "motiongfx_vello"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_vello_graphics = { workspace = true }
motiongfx_core = { version = "0.1.0", path = "../motiongfx_core", features = ["vello_graphics"] }

[lints]
workspace = true
