[package]
name = "motiongfx_core_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
motiongfx_macro_utils = { path = "../../motiongfx_macro_utils" }

[lints]
workspace = true
